Style: Fix grammar errors and refactor code